--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     implementation 'com.commonsware.cwac:anddown:0.3.0'
     implementation 'io.sentry:sentry-android:1.7.3'
     implementation 'com.madgag.spongycastle:core:1.54.0.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
     implementation "androidx.core:core-ktx:1.6.0"
