--- a/app/src/textsAndCallsStats/AndroidManifest.xml
+++ b/app/src/textsAndCallsStats/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- mapping and anonymizing contacts in call and text logs -->
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.READ_CALL_LOG" />
-    <!-- texts logging -->
-    <uses-permission android:name="android.permission.READ_SMS" />
-    <uses-permission android:name="android.permission.RECEIVE_MMS" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+<!--  This content was moved into the normal manifest file, this file only remains to allow builds to continue working without changes -->
+<!--    &lt;!&ndash; mapping and anonymizing contacts in call and text logs &ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.READ_CONTACTS" />-->
+<!--    <uses-permission android:name="android.permission.READ_CALL_LOG" />-->
+<!--    &lt;!&ndash; texts logging &ndash;&gt;-->
+<!--    <uses-permission android:name="android.permission.READ_SMS" />-->
+<!--    <uses-permission android:name="android.permission.RECEIVE_MMS" />-->
+<!--    <uses-permission android:name="android.permission.RECEIVE_SMS" />-->
 </manifest>
