--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,6 +143,7 @@ Version history:
     string, we no longer require phone permissions as an invariant post-registration permission either.
 82: 3.5.11 - Added USE_EXACT_ALARM manifest permission because it crashes without it on Android 14
 83: 3.5.12 - Makes changes to the gps fuzzing math to ensure all numbers are within a 360 degree magnitude.
+84: 3.6.0 - adds new message receiving push notification feature.
 
 TODO: we are stalled on the formatting for the hardware information for gps, accel, gyro.
    This probably requires a new data stream.
@@ -170,8 +171,8 @@ android {
         minSdkVersion 23
         multiDexEnabled true
         targetSdkVersion 33
-        versionCode 83       //TODO: update this Beiwe version code for new releases
-        versionName '3.5.12'  //TODO: update this Beiwe version number for new releases
+        versionCode 84       //TODO: update this Beiwe version code for new releases
+        versionName '3.6.0'  //TODO: update this Beiwe version number for new releases
         setProperty("archivesBaseName", "Beiwe-$versionName")
     }
 
