--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,12 +143,16 @@ Version history:
     string, we no longer require phone permissions as an invariant post-registration permission either.
 82: 3.5.11 - Added USE_EXACT_ALARM manifest permission because it crashes without it on Android 14
 83: 3.5.12 - Makes changes to the gps fuzzing math to ensure all numbers are within a 360 degree magnitude.
-84: 3.6.0 - adds new message receiving push notification feature, adds app-to-server heartbeat,
-    adds several extra datapoints of app activity like last upload attempt, fixes bug where fcm
-    token was gated by the no-cellular-upload flag. Adds an automatic checker to the main menu
-    to update the list of surveys every second to reflect the status of active push notifications.
+84: 3.6.0 - Adds new message receiving push notification feature
+    Adds app-to-server heartbeat.
+    Adds several extra datapoints of app activity like last upload attempt.
+    Fixes bug where fcm token was gated by the no-cellular-upload flag.
+    Adds an real-time-ish check to the main menu that updates the list of surveys to reflect the
+      status of active push notifications.
     Fixes bug where the back stack was incorrectly updated after a survey was completed causing the
-    Main Menu to be present in the back stack.
+      Main Menu activity to be on the back stack twice, which also caused the button state to be wrong.
+    Fixes a bug where the permissions check for the call log data stream was erroneously checking
+      whether the ability to make a phone call was granted.
 
 TODO: we are stalled on the formatting for the hardware information for gps, accel, gyro.
    This probably requires a new data stream.
