chore: add network security config, clear text, and service
Signed-off-by: Reyva Babtista <reyvababtista16@gmail.com>

(cherry picked from commit 2c4d0693743e64f41d85be3ac8347146e1d02b3f)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="${appName}${appNameSuffix}"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
 
         <!-- ACTIVITIES -->
 
@@ -161,6 +162,10 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <service
+            android:name=".listeners.BLEService"
+            android:exported="false" />
 
         <!-- RECEIVERS -->
 
