refactor: data clean up
Signed-off-by: Reyva Babtista <reyvababtista16@gmail.com>
(cherry picked from commit c20bf4d5981db06ced639dd4a83a3dd9ec47231f)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -164,7 +164,7 @@
         </service>
 
         <service
-            android:name=".listeners.BLEService"
+            android:name=".listeners.OmniringListener"
             android:exported="false" />
 
         <!-- RECEIVERS -->
